# Podder

./: CMakeLists.txt  quickbuild.sh
data/: podder.desktop
src/: Main.vala  config.vala  config.vala.cmake
src/Backend/: PodcastData.vala
src/Widgets/: AppWindow.vala  ContentView.vala  PodBox.vala  PodList.vala  SearchView.vala  Toolbar.vala  WindowToolbar.vala
